--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,25 +2,24 @@ steps:
   # Install Python dependencies
   - name: 'python:3.11'
     entrypoint: 'pip'
-    args: ['install', 'firebase-admin', '--user']
+    args: ['install', 'firebase-admin']
 
   # Export data from Firestore to JSON
   - name: 'python:3.11'
     entrypoint: 'python3'
     args: ['scripts/export_to_web.py']
-    env:
-      - 'GOOGLE_APPLICATION_CREDENTIALS=/workspace/service-account-key.json'
-
-  # Install Node.js dependencies for Firebase CLI
-  - name: 'node:20'
-    entrypoint: 'npm'
-    args: ['install', '-g', 'firebase-tools']
 
   # Deploy to Firebase Hosting
   - name: 'node:20'
-    entrypoint: 'firebase'
-    args: ['deploy', '--only', 'hosting', '--project', 'earplugs-and-memories']
-    env:
-      - 'FIREBASE_TOKEN=${_FIREBASE_TOKEN}'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - 'npm install -g firebase-tools && firebase deploy --only hosting --project earplugs-and-memories --token $$FIREBASE_TOKEN'
+    secretEnv: ['FIREBASE_TOKEN']
+
+availableSecrets:
+  secretManager:
+    - versionName: projects/earplugs-and-memories/secrets/firebase-token/versions/latest
+      env: 'FIREBASE_TOKEN'
 
 timeout: '1200s'
