--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
         env:
           GOOGLE_CLOUD_PROJECT: earplugs-and-memories
         run: |
-          echo '${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}' > $HOME/gcloud-key.json
+          echo "${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}" | base64 --decode > $HOME/gcloud-key.json
           export GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcloud-key.json
           python3 scripts/export_to_web.py
 
