--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,9 +24,8 @@ jobs:
       - name: Export data from Firestore
         env:
           GOOGLE_CLOUD_PROJECT: earplugs-and-memories
-          GOOGLE_APPLICATION_CREDENTIALS_JSON: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
         run: |
-          echo "$GOOGLE_APPLICATION_CREDENTIALS_JSON" | base64 -d > $HOME/gcloud-key.json
+          echo '${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}' > $HOME/gcloud-key.json
           export GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcloud-key.json
           python3 scripts/export_to_web.py
 
