Add automatic concert processing and deployment
- New Cloud Function: processNewConcert to handle web form submissions
- Automatically creates/finds artist and venue IDs
- Auto-assigns show numbers
- Triggers GitHub Actions deployment
- Updated GitHub workflow to accept 'new-concert' events
- Fixed success message in add-concert form

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to Firebase
 
 on:
   repository_dispatch:
-    types: [deploy-setlist]
+    types: [deploy-setlist, new-concert]
   workflow_dispatch:
 
 jobs:
