--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to Firebase
 
 on:
   repository_dispatch:
-    types: [deploy-setlist, new-concert]
+    types: [deploy-setlist, new-concert, manual-deploy, photo-upload, photo-delete]
   workflow_dispatch:
 
 jobs:
